<resources>
    <string name="app_name">List of Dogs</string>

    <string name="breed_of_dog">Breed Of Dog</string>
    <string name="nickname">Nickname</string>
    <string name="hostName">Host Name</string>
    <string name="address">Address</string>

    <string name="add">add</string>
    <string name="list">List</string>
    <string name="input">Input</string>

    <string name="toolbar_search">search</string>
</resources>